--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -12,7 +12,7 @@
 <div *ngIf="registerMode" class="container">
     <div class="row justify-content-center">
         <div class="col-4">
-            <p>Register Form goes here</p>
+            <app-register (cancelRegister)="cancelRegisterMode($event)"></app-register>
         </div>
     </div>
 </div>
