--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -1,25 +1,29 @@
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <div class="container">
+        <!-- nav brand -->
         <a class="navbar-brand" routerLink="/">Dating For Two</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
-            <ul class="navbar-nav mr-auto" *ngIf="accountService.currentUser$ | async">
-                <li class="nav-item ">
-                    <a class="nav-link" routerLink="/members" routerLinkActive="active">Matches </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" routerLink="/lists" routerLinkActive="active">Lists</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link " routerLink="/messages" routerLinkActive="active">Messages</a>
-                </li>
+            <ul class="navbar-nav mr-auto">
+                <!-- nav links -->
+                <ng-container *ngIf="accountService.currentUser$ | async" >
+                    <li class="nav-item ">
+                        <a class="nav-link" routerLink="/members" routerLinkActive="active">Matches </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" routerLink="/lists" routerLinkActive="active">Lists</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link " routerLink="/messages" routerLinkActive="active">Messages</a>
+                    </li>
+                </ng-container>
                 
             </ul>
             <!-- Dropdown -->
             <div class="dropdown" *ngIf="accountService.currentUser$ | async" dropdown>
-                <a class="dropdown-toggle text-light" dropdownToggle>Welcome User</a>
+                <a class="dropdown-toggle text-light" dropdownToggle>Welcome User!</a>
                 <div class="dropdown-menu mt-3" *dropdownMenu>
                     <a class="dropdown-item">Edit Profile</a>
                     <div class="dropdown-divider"></div>
@@ -27,7 +31,7 @@
                 </div>
             </div>
             <!-- Form -->
-            <form *ngIf="(accountService.currentUser$ | async) === null" #loginForm ="ngForm" class="form-inline mt-2 mt-md-0" (ngSubmit)="login()" 
+            <form #loginForm ="ngForm" *ngIf="(accountService.currentUser$ | async) === null" class="form-inline mt-2 mt-md-0" (ngSubmit)="login()" 
                 autocomplete="off">
                 <input
                     name="username"
