--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -1,7 +1,7 @@
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary">
     <div class="container">
         <!-- nav brand -->
-        <a class="navbar-brand" routerLink="/">Dating For Two</a>
+        <a class="navbar-brand" routerLink="/">ComeVenus</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -45,7 +45,7 @@
                     class="form-control mr-sm-2" 
                     type="password" 
                     placeholder="Password">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Login</button>
+                <button class="btn btn-success my-2 my-sm-0" type="submit">Login</button>
             </form>
         </div>
     </div>
