--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -3,8 +3,8 @@
         <h1>Find your matches</h1>
         <p class="lead">Come on in to view your matches</p>
         <div class="text-center">
-            <button (click)="registerToggle()" class="btn btn-primary btn-lg mr-2">Register</button>
-            <button class="btn btn-info btn-lg">Learn More</button>
+            <button (click)="registerToggle()" class="btn btn-outline-primary btn-lg mr-2">Register</button>
+            <button class="btn btn-outline-secondary btn-lg">Learn More</button>
         </div>
     </div>
 </div>
