--- a/client/src/app/errors/server-error/server-error.component.html
+++ b/client/src/app/errors/server-error/server-error.component.html
@@ -1,19 +1,4 @@
-<!-- <h4>Internal server error - refreshing the page will make the error disappear!</h4>
-<ng-container>
-  <h5 class="text-danger">Error: {{error.message}}</h5>
-  <p class="font-weight-bold">Note: If you are seeing this then Angular is probably not to blame.</p>
-  <p>What to do next?</p>
-  <ol>
-    <li> Open dev tools </li>
-    <li>Inspect the network tab </li>
-    <li>Check the failing requests</li>
-    <li>Examine the request URL - make sure it is correct</li>
-    <li>Reproduce the error in Postman - if we see the same response, then the issue is not with Angular</li>
-  </ol>
-  <p>The following is the stack trace - this is where your investigation should start!</p>
-  <code class="mt-5" style="background-color: whitesmoke;"> {{error.details}} </code>
-</ng-container> -->
-
+  <!-- server page for deevelopment mode -->
 <div class="card bg-light mb-3" style="max-width: 60rem;">
     <h3 class="font-weight-bold card-title ml-3">Internal Server Error</h3>
     <h6 class="card-subtitle ml-4 text-muted">Refreshing the page will make the error disappear</h6>
