--- a/client/src/app/members/member-detail/member-detail.component.html
+++ b/client/src/app/members/member-detail/member-detail.component.html
@@ -1,1 +1,56 @@
-<p>member-detail works!</p>
+<div class="row" *ngIf="member">
+  <div class="col-4">
+    <div class="card">
+      <img src="{{member.photoUrl || '.assets/user.png'}}" alt="{{member.alias}}"
+        class="card-img-top img-thumbnail">
+      <div class="card-body">
+        <div>
+          <strong>Location:</strong>
+          <p>{{member.city}}, {{member.country}}</p>
+        </div>
+        <div>
+          <strong>Age:</strong>
+          <p>{{member.age}}</p>
+        </div>
+        <div>
+          <strong>Member Since:</strong>
+          <p>{{member.created}}</p>
+        </div>
+        <div>
+          <strong>Last Active:</strong>
+          <p>{{member.lastActive}}</p>
+        </div>
+        <div class="card-footer">
+          <div class="btn-group d-flex">
+            <button class="btn btn-primary mr-2">Like</button>
+            <button class="btn btn-success">Message</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="col-8">
+    <tabset class="member-tabset">
+      <!-- About Tab -->
+      <tab heading="About {{member.alias}}">
+        <h4>Description</h4>
+        <p>{{member.introduction}}</p>
+        <h4>Looking For:</h4>
+        <p>{{member.lookingFor}}</p>
+      </tab>
+      <!-- Interests Tab -->
+      <tab heading="Interests">
+        <h4>Interests</h4>
+        <p>{{member.interests}}</p>
+      </tab>
+      <!-- Photos Tab -->
+      <tab heading="Photos">
+       
+      </tab>
+      <!-- Messages Tab -->
+      <tab heading="Messages">
+        <h4>Messages</h4>
+       </tab>
+    </tabset>
+  </div>
+</div>
