added deafult profile image if there's no photos

--- a/client/src/app/members/member-detail/member-detail.component.html
+++ b/client/src/app/members/member-detail/member-detail.component.html
@@ -1,7 +1,7 @@
 <div class="row" *ngIf="member">
   <div class="col-4">
     <div class="card">
-      <img src="{{member.photoUrl || '.assets/user.png'}}" alt="{{member.alias}}"
+      <img src="{{member.photoUrl || './assets/user.png'}}" alt="{{member.alias}}"
         class="card-img-top img-thumbnail">
       <div class="card-body">
         <div>
@@ -45,7 +45,7 @@
       </tab>
       <!-- Photos Tab -->
       <tab heading="Photos">
-       
+      
       </tab>
       <!-- Messages Tab -->
       <tab heading="Messages">
