minor change to text in h4 elements

--- a/client/src/app/members/member-detail/member-detail.component.html
+++ b/client/src/app/members/member-detail/member-detail.component.html
@@ -33,14 +33,14 @@
     <tabset class="member-tabset">
       <!-- About Tab -->
       <tab heading="About {{member.alias}}">
-        <h4>Description</h4>
+        <h4>Description:</h4>
         <p>{{member.introduction}}</p>
         <h4>Looking For:</h4>
         <p>{{member.lookingFor}}</p>
       </tab>
       <!-- Interests Tab -->
       <tab heading="Interests">
-        <h4>Interests</h4>
+        <h4>Interests:</h4>
         <p>{{member.interests}}</p>
       </tab>
       <!-- Photos Tab -->
@@ -49,7 +49,7 @@
       </tab>
       <!-- Messages Tab -->
       <tab heading="Messages">
-        <h4>Messages</h4>
+        <h4>Messages:</h4>
        </tab>
     </tabset>
   </div>
