--- a/client/src/app/members/member-edit/member-edit.component.html
+++ b/client/src/app/members/member-edit/member-edit.component.html
@@ -54,8 +54,8 @@
             </div>
           </form>
         </tab>
-       <tab heading="Edit Photos">
-          <p>Photo Edit will go here</p>
+       <tab heading="Edit Phots">
+          <app-photo-editor [member]="member"></app-photo-editor>
         </tab>
       </tabset>
   </div>
