--- a/client/src/app/members/photo-editor/photo-editor.component.html
+++ b/client/src/app/members/photo-editor/photo-editor.component.html
@@ -1,5 +1,5 @@
-<div class="row">
-  <div class="col-2" *ngFor="let photo of member.photos">
+<div class="row ml-2" style="width: 98%;">
+  <div class="col-2 mt-2" *ngFor="let photo of member.photos">
     <img src="{{photo.url}}" alt="{{photo.url}}" class="img-thumbnail p-l">
     <div class="text-center">
       <button class="btn btn-sm btn-success mr-1">Main</button>
@@ -7,3 +7,65 @@
     </div>
   </div>
 </div>
+<!-- File Uploader -->
+<div class="row mt-3 ml-2">
+    <div class="col-md-9">
+      <h3 >Add Photos</h3>
+      <div ng2FileDrop
+           [ngClass]="{'nv-file-over': hasBaseDropzoneOver}"
+           (fileOver)="fileOverBase($event)"
+           [uploader]="uploader"
+           style="width: 200px;"
+           class="card bg-faded p-3 text-center mb-3 my-drop-zone">
+           <i class="fa fa-upload fa-3x"></i>
+          <p>Drop photos here</p>
+        </div>
+
+      <h6>File(s) Upload </h6>
+      <input class="mb-2" type="file" ng2FileSelect [uploader]="uploader" multiple  /><br/>
+    </div>
+  <!-- only display this column if there is an image -->
+  <div class="col-md-9 ml-1" style="margin-bottom: 40px" *ngIf="uploader?.queue?.length">
+      <hr>
+      <h3 class="text-center" >Upload Queue</h3>
+      <h6>Photos: {{ uploader?.queue?.length }}</h6>
+
+      <table class="table">
+          <thead>
+            <tr>
+                <th width="50%"> File Name</th>
+                <th>File Size</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let item of uploader.queue">
+                <td><strong>{{ item?.file?.name }}</strong></td>
+                <td *ngIf="uploader.options.isHTML5" nowrap>{{ item?.file?.size/1024/1024 | number:'.2' }} MB</td>
+             </tr>
+
+          </tbody>
+      </table>
+      <div>
+          <div class="mb-2">
+              <h6>Queue Progress:</h6>
+              <div class="progress">
+                <div class="progress-bar" role="progressbar" [ngStyle]="{ 'width': uploader.progress + '%' }"></div>
+              </div>
+          </div>
+          <button type="button" class="btn btn-success btn-s mr-1"
+                  (click)="uploader.uploadAll()" [disabled]="!uploader.getNotUploadedItems().length">
+              <i class="fa fa-upload"></i> Upload all
+          </button>
+          <button type="button" class="btn btn-warning btn-s mr-1"
+                  (click)="uploader.cancelAll()" [disabled]="!uploader.isUploading">
+              <i class="fa fa-ban"></i> Cancel all
+          </button>
+          <button type="button" class="btn btn-danger btn-s mr-1"
+                  (click)="uploader.clearQueue()" [disabled]="!uploader.queue.length">
+              <i class="fa fa-trash"></i> Remove all
+          </button>
+      </div>
+
+  </div>
+</div>
+
