--- a/client/src/app/members/member-detail/member-detail.component.html
+++ b/client/src/app/members/member-detail/member-detail.component.html
@@ -45,7 +45,7 @@
       </tab>
       <!-- Photos Tab -->
       <tab heading="Photos">
-        <ngx-gallery [options]="galleryOptions" [images]="galleryImages" style="display: inline-block; margin-bottom: 20px;"></ngx-gallery>
+        <ngx-gallery [options]="galleryOptions" [images]="galleryImages" style="display: inline-block; margin-bottom: 1%; margin-left: 2%;"></ngx-gallery>
       </tab>
       <!-- Messages Tab -->
       <tab heading="Messages">
