--- a/client/src/app/members/photo-editor/photo-editor.component.html
+++ b/client/src/app/members/photo-editor/photo-editor.component.html
@@ -1,8 +1,14 @@
+<!-- Set main Photo or delete a photo -->
 <div class="row ml-2" style="width: 98%;">
   <div class="col-2 mt-2" *ngFor="let photo of member.photos">
     <img src="{{photo.url}}" alt="{{photo.url}}" class="img-thumbnail p-l">
     <div class="text-center">
-      <button class="btn btn-sm btn-success mr-1">Main</button>
+      <button
+      [disabled]="photo.isMain"
+      (click)="setMainPhoto(photo)"
+      [ngClass]='photo.isMain ? "btn-success active" : "btn-outline-success"'
+      class="btn btn-sm mr-1">Main
+    </button>
       <button class="btn btn-sm btn-danger"><i class="fa fa-trash"></i></button>
     </div>
   </div>
