--- a/client/src/app/members/photo-editor/photo-editor.component.html
+++ b/client/src/app/members/photo-editor/photo-editor.component.html
@@ -4,12 +4,16 @@
     <img src="{{photo.url}}" alt="{{photo.url}}" class="img-thumbnail p-l">
     <div class="text-center">
       <button
-      [disabled]="photo.isMain"
-      (click)="setMainPhoto(photo)"
-      [ngClass]='photo.isMain ? "btn-success active" : "btn-outline-success"'
-      class="btn btn-sm mr-1">Main
-    </button>
-      <button class="btn btn-sm btn-danger"><i class="fa fa-trash"></i></button>
+        [disabled]="photo.isMain"
+        (click)="setMainPhoto(photo)"
+        [ngClass]='photo.isMain ? "btn-success active" : "btn-outline-success"'
+        class="btn btn-sm mr-1">Main
+      </button>
+      <button
+        [disabled]="photo.isMain"
+        (click)="deletePhoto(photo.id)"
+        class="btn btn-sm btn-danger">
+          <i class="fa fa-trash"></i></button>
     </div>
   </div>
 </div>
