--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -1,17 +1,49 @@
-<form #registerForm ="ngForm" (ngSubmit)="register()" autocomplete="off">
-    <h2 class="text-center text-primary">Sign Up</h2>
-    <hr>
-    <div class="form-group">
-        <input type="text" class="form-control" name="username"
-            [(ngModel)]="model.username" placeholder="Username">
-    </div>
 
-    <div class="form-group">
-        <input type="password" class="form-control" name="password"
-            [(ngModel)]="model.password" placeholder="Password">
-    </div>
-    <div class="form-group text-center">
-        <button type="submit" class="btn btn-success mr-2">Register</button>
-        <button type="button" (click)="cancel()" class="btn btn-light mr-2">Cancel</button>
-    </div>
+<form id="signUp" [formGroup]='registerForm' (ngSubmit)="register()" autocomplete="off">
+  <h2 class="text-center text-primary">Sign Up</h2>
+  <hr>
+  <!-- username field -->
+  <app-text-input [formControl]='registerForm.controls["username"]'
+    [label]="'Username'">
+  </app-text-input>
+  <!-- alias field -->
+  <app-text-input [formControl]='registerForm.controls["alias"]'
+    [label]="'Alias'">
+  </app-text-input>
+  <!-- gender field -->
+  <div class="form-group ml-2 mb-0">
+    <label class="control-label" style="margin-right: 10px;"> <h6 class='text-primary'>Gender: </h6>  </label>
+    <label class="radio-inline">
+      <i class="fa fa-mars"></i> <input class="ml-2 mr-3" type="radio" value="male" formControlName='gender'>
+    </label>
+    <label class="radio-inline">
+      <i class="fa fa-venus ml-2"></i> <input class="ml-2" type="radio" value="female" formControlName='gender'>
+    </label>
+  </div>
+  <!-- birthday field -->
+  <app-date-input [formControl]='registerForm.controls["dateOfBirth"]'
+    [label]="'Date Of Birth'" [maxDate]="maxDate">
+  </app-date-input>
+  <!-- city field -->
+  <app-text-input [formControl]='registerForm.controls["city"]'
+    [label]="'City'">
+  </app-text-input>
+  <!-- country field -->
+  <app-text-input [formControl]='registerForm.controls["country"]'
+    [label]="'Country'">
+  </app-text-input>
+  <!-- password field -->
+  <app-text-input [formControl]='registerForm.controls["password"]'
+    [type]="'password'"
+    [label]="'Password'">
+  </app-text-input>
+  <!-- confirm password field -->
+  <app-text-input [type]="'password'" [formControl]='registerForm.controls["confirmPassword"]'
+    [label]="'Confirm Password'">
+  </app-text-input>
+
+  <div class="form-group text-center" >
+    <button type="submit" class="btn btn-success mr-2">Register</button>
+    <button type="button" (click)="cancel()" class="btn btn-light mr-2">Cancel</button>
+  </div>
 </form>
