--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -1,5 +1,5 @@
 
-<form id="signUp" [formGroup]='registerForm' (ngSubmit)="register()" autocomplete="off">
+<form [formGroup]='registerForm' (ngSubmit)="registerForm.valid && register()" autocomplete="off">
   <h2 class="text-center text-primary">Sign Up</h2>
   <hr>
   <!-- username field -->
@@ -13,12 +13,14 @@
   <!-- gender field -->
   <div class="form-group ml-2 mb-0">
     <label class="control-label" style="margin-right: 10px;"> <h6 class='text-primary'>Gender: </h6>  </label>
-    <label class="radio-inline">
-      <i class="fa fa-mars"></i> <input class="ml-2 mr-3" type="radio" value="male" formControlName='gender'>
-    </label>
-    <label class="radio-inline">
-      <i class="fa fa-venus ml-2"></i> <input class="ml-2" type="radio" value="female" formControlName='gender'>
-    </label>
+    <div>
+      <label class="radio-inline">
+        <i class="fa fa-mars"></i> <input class="ml-2 mr-3" type="radio" value="male" formControlName='gender'>
+      </label>
+      <label class="radio-inline">
+        <i class="fa fa-venus ml-2"></i> <input class="ml-2" type="radio" value="female" formControlName='gender'>
+      </label>
+    </div>
   </div>
   <!-- birthday field -->
   <app-date-input [formControl]='registerForm.controls["dateOfBirth"]'
@@ -43,7 +45,7 @@
   </app-text-input>
 
   <div class="form-group text-center" >
-    <button type="submit" class="btn btn-success mr-2">Register</button>
+    <button [disabled]="registerForm.invalid" type="submit" class="btn btn-success mr-2">Register</button>
     <button type="button" (click)="cancel()" class="btn btn-light mr-2">Cancel</button>
   </div>
 </form>
