the member card will now show the age also

--- a/client/src/app/members/member-card/member-card.component.html
+++ b/client/src/app/members/member-card/member-card.component.html
@@ -27,7 +27,7 @@
       <i class="fa  fa-user-circle-o mr-2"></i>
       <i *ngIf="member.gender == 'male'" class="fa fa-male mr-2"></i>
       <i *ngIf="member.gender == 'female'" class="fa fa-female mr-2"></i>
-      {{member.alias}}
+      {{member.alias}}, {{member.age}}
     </h6>
     <p class="card-text text-muted text-center">{{member.city}}</p>
   </div>
