--- a/client/src/app/members/member-list/member-list.component.html
+++ b/client/src/app/members/member-list/member-list.component.html
@@ -1,3 +1,33 @@
+<div class="text-center mt-3">
+  <h2>Your Matches - {{pagination?.totalItems}} found</h2>
+</div>
+
+<div class="container mt-3">
+  <form #form="ngForm" (ngSubmit)="loadMembers()" autocomplete="off" class="form-inline mb-3">
+    <div class="form-group">
+      <label> Age from:</label>
+      <input type="number" class="form-control ml-1" style="width: 70px;"
+        name="minAge" [(ngModel)]="userParams.minAge">
+    </div>
+    <div class="form-group px-3">
+      <label> Age to:</label>
+      <input type="number" class="form-control ml-1" style="width: 70px;"
+        name="maxAge" [(ngModel)]="userParams.maxAge">
+    </div>
+    <div class="form-group px-2">
+      <label> Show:</label>
+      <select class="form-control ml-1" style="width: 130px;"
+        name="gender" [(ngModel)]="userParams.gender">
+        <option *ngFor="let gender of genderList" [value]="gender.value">
+          {{gender.display}}
+        </option>
+      </select>
+    </div>
+    <button class="btn-primary ml-1" type="submit">Apply Filters</button>
+    <button (click)="resetFilters()" class="btn-info ml-1" type="submit">Reset Filters</button>
+  </form>
+</div>
+
 <div class="row">
   <div *ngFor="let member of members" class="col-2">
     <app-member-card [member] ="member"></app-member-card>
