add and use the timeAgo module for any lastActive  field.

--- a/client/src/app/members/member-detail/member-detail.component.html
+++ b/client/src/app/members/member-detail/member-detail.component.html
@@ -19,7 +19,7 @@
         <!-- Last Active and Created Dates -->
         <div>
           <strong>Member Since:</strong>
-          <p>{{member.created | date: 'longDate'}}</p>
+          <p>{{member.created | timeago}}</p>
         </div>
         <div>
           <strong>Last Active:</strong>
