--- a/client/src/app/members/member-edit/member-edit.component.html
+++ b/client/src/app/members/member-edit/member-edit.component.html
@@ -22,11 +22,11 @@
           </div>
           <div>
             <strong>Member Since:</strong>
-            <p>{{member.created}}</p>
+            <p>{{member.created | date: 'longDate'}}</p>
           </div>
           <div>
             <strong>Last Active:</strong>
-            <p>{{member.lastActive}}</p>
+            <p>{{member.lastActive | timeago}}</p>
           </div>
         </div>
           <div class="card-footer">
