add like user functionality to the client

--- a/client/src/app/members/member-card/member-card.component.html
+++ b/client/src/app/members/member-card/member-card.component.html
@@ -10,7 +10,7 @@
       </li>
       <li class="list-inline-item">
         <!-- like button -->
-        <button class="btn btn-danger">
+        <button class="btn btn-danger" (click)="addLike(member)">
           <i class="fa fa-heart"></i>
         </button>
       </li>
