added pagination in on the client side

--- a/client/src/app/members/member-list/member-list.component.html
+++ b/client/src/app/members/member-list/member-list.component.html
@@ -58,7 +58,7 @@
     <app-member-card [member] ="member"></app-member-card>
   </div>
 </div>
-
+<!-- allow users to select between paginated pages -->
 <div class="d-flex justify-content-center" *ngIf="pagination">
   <pagination
     [boundaryLinks]="true"
