--- a/client/src/app/members/member-detail/member-detail.component.html
+++ b/client/src/app/members/member-detail/member-detail.component.html
@@ -2,7 +2,7 @@
     date last active and created, country and city. -->
 <div class="row" *ngIf="member">
   <div class="col-4">
-    <div class="card">
+    <div class="card bg-light">
       <img src="{{member.photoUrl || './assets/user.png'}}" alt="{{member.alias}}"
         class="card-img-top img-thumbnail">
       <div class="card-body">
@@ -28,7 +28,7 @@
         <!-- Like and Message -->
         <div class="card-footer">
           <div class="btn-group d-flex">
-            <button class="btn btn-primary mr-2">Like</button>
+            <button class="btn btn-primary">Like</button>
             <button class="btn btn-success">Message</button>
           </div>
         </div>
@@ -39,23 +39,35 @@
     <tabset class="member-tabset">
       <!-- About Tab -->
       <tab heading="About {{member.alias}}">
-        <h4>Description:</h4>
-        <p>{{member.introduction}}</p>
-        <h4>Looking For:</h4>
-        <p>{{member.lookingFor}}</p>
+        <div class="mx-2">
+          <h4 style="text-align: center;"><strong>Description</strong></h4>
+          <p>{{member.introduction}}</p>
+          <h4 style="text-align: center;">
+            <strong>Looking For:</strong></h4>
+          <p>{{member.lookingFor}}</p>
+        </div>
       </tab>
       <!-- Interests Tab -->
       <tab heading="Interests">
-        <h4>Interests:</h4>
-        <p>{{member.interests}}</p>
+        <div class="mx-2">
+          <h4 style="text-align: center;"><strong>Interests</strong></h4>
+          <p>{{member.interests}}</p>
+        </div>
       </tab>
       <!-- Photos Tab -->
       <tab heading="Photos">
-        <ngx-gallery [options]="galleryOptions" [images]="galleryImages" style="display: inline-block; margin-bottom: 1%; margin-left: 2%;"></ngx-gallery>
+        <div class="mx-2">
+          <ngx-gallery [options]="galleryOptions"
+            [images]="galleryImages" style="display: inline-block;
+              margin-bottom: 1%; margin-left: 2%;">
+          </ngx-gallery>
+        </div>
       </tab>
       <!-- Messages Tab -->
       <tab heading="Messages">
-       <app-member-messages [username]="member.userName"></app-member-messages>
+        <div class="mx-2">
+          <app-member-messages [username]="member.userName"></app-member-messages>
+        </div>
        </tab>
     </tabset>
   </div>
