--- a/client/src/app/members/member-card/member-card.component.html
+++ b/client/src/app/members/member-card/member-card.component.html
@@ -16,7 +16,11 @@
       </li>
       <li class="list-inline-item">
         <!-- message button -->
-        <button class="btn btn-success">
+        <button routerLink="/members/{{member.userName}}"
+          class="btn btn-success"
+          [queryParams]="{tab:3}"
+          >
+
           <i class="fa fa-paper-plane"></i>
         </button>
       </li>
