added the member-detailed route resolver to resolve the problem of the tabs being undefined when we try to access them from another component.

--- a/client/src/app/members/member-detail/member-detail.component.html
+++ b/client/src/app/members/member-detail/member-detail.component.html
@@ -1,6 +1,6 @@
 <!-- Shows the member details, including profile picture,
     date last active and created, country and city. -->
-<div class="row" *ngIf="member">
+<div class="row">
   <div class="col-4">
     <div class="card bg-light">
       <img src="{{member.photoUrl || './assets/user.png'}}" alt="{{member.alias}}"
