--- a/client/src/app/members/member-detail/member-detail.component.html
+++ b/client/src/app/members/member-detail/member-detail.component.html
@@ -66,7 +66,7 @@
       <!-- Messages Tab -->
       <tab heading="Messages" (selectTab)="onTabActivated($event)">
         <div class="mx-2">
-          <app-member-messages [messages]="messages"></app-member-messages>
+          <app-member-messages [messages]="messages" [username]="member.userName"></app-member-messages>
         </div>
        </tab>
     </tabset>
