--- a/client/src/app/members/member-messages/member-messages.component.html
+++ b/client/src/app/members/member-messages/member-messages.component.html
@@ -37,12 +37,18 @@
     </ul>
   </div>
   <div class="card-footer">
-    <form>
+    <form #messageForm="ngForm" (ngSubmit)="sendMessage()" autocomplete="off">
       <div class="input-group">
-        <input type="text" class="form-control input-sm ps-2"
-          placeholder="Send a private message">
+        <input
+          type="text"
+          class="form-control input-sm ps-2"
+          placeholder="Send a private message"
+          [(ngModel)]="messageContent"
+          required
+          name="messageContent"
+          >
         <div class="input-group-append">
-          <button class="btn btn-primary ml-1" type="submit">Send</button>
+          <button [disabled]="!messageForm.valid" class="btn btn-primary ml-1" type="submit">Send</button>
         </div>
       </div>
     </form>
