--- a/client/src/app/messages/messages.component.css
+++ b/client/src/app/messages/messages.component.css
@@ -1,10 +1,11 @@
 .img-circle
  {
    max-height: 50px;
+   margin-right: 0.5rem ;
 
  }
 
  table
  {
-   background-color: #FDFDFD;
+   background-color: #F2F3F5;
  }
