--- a/client/src/app/messages/messages.component.html
+++ b/client/src/app/messages/messages.component.html
@@ -31,13 +31,13 @@
 <div *ngIf="messages?.length > 0" class="row">
   <table class="table table-hover" style="cursor: pointer;">
     <tr>
-      <th class="text-primary" style="width: 40%;  text-align: center;"> Message:</th>
+      <th class="text-primary" style="width: 40%;  text-align: center;"> Messages:</th>
       <th class="text-primary" style="width: 20%;"> From / To :</th>
       <th class="text-primary" style="width: 20%;"> Sent / Received:</th>
       <th style="width: 20%;"></th>
     </tr>
     <!-- Display messages -->
-    <tr *ngFor="let message of messages"
+    <tr [hidden]="loading" *ngFor="let message of messages"
       routerLink='{{container === "Outbox" ?
         "/members/" + message.recipientUsername :
           "/members/" + message.senderUsername}} ' [queryParams]="{tab:3}">
@@ -53,7 +53,7 @@
 
         <div *ngIf="container !== 'Outbox'">
           <img
-            class="img-circle rounded-circle mr-2"
+            class="img-circle rounded-circle"
             src="{{message.senderPhotoUrl || './assets/user.png'}}"
             alt="{{message.senderUsername}}">
           <strong>{{message.senderUsername | titlecase}}</strong>
@@ -67,7 +67,7 @@
   </table>
 </div>
 <!-- pagination header -->
-<div class="d-flex justify-content-center" *ngIf="pagination">
+<div class="d-flex justify-content-center" *ngIf="pagination && !loading && messages.length > 0">
   <pagination
     [boundaryLinks]="true"
     [totalItems]="pagination.totalItems"
