--- a/client/src/app/messages/messages.component.html
+++ b/client/src/app/messages/messages.component.html
@@ -61,7 +61,7 @@
       </td>
       <td>{{message.messageSent | timeago}}</td>
       <td>
-        <button type="button" class="btn btn btn-outline-danger">Delete</button>
+        <button (click)="$event.stopPropagation()" (click)="deleteMessage(message.id)" type="button" class="btn btn-outline-danger">Delete</button>
       </td>
     </tr>
   </table>
