--- a/client/src/app/members/member-messages/member-messages.component.html
+++ b/client/src/app/members/member-messages/member-messages.component.html
@@ -1,10 +1,10 @@
 <div class="card bg-light">
   <div class="card-body">
-    <div *ngIf="messages?.length === 0">
+    <div *ngIf="(getMessageService().messageThread$ | async)?.length === 0">
       No Messages yet...
     </div>
-    <ul *ngIf="messages?.length> 0" class="chat">
-      <li *ngFor="let message of messages">
+    <ul *ngIf="(getMessageService().messageThread$ | async)?.length> 0" class="chat">
+      <li *ngFor="let message of (getMessageService().messageThread$ | async)">
         <div>
           <span class="chat-img float-right">
             <img src="{{message.senderPhotoUrl || './assets/user.png'}}"
@@ -31,9 +31,7 @@
             <p>{{message.content}}</p>
           </div>
         </div>
-
       </li>
-
     </ul>
   </div>
   <div class="card-footer">
