Added photo management where admins and moderators can approve or deny any new photo the user uploads.

--- a/client/src/app/members/photo-editor/photo-editor.component.css
+++ b/client/src/app/members/photo-editor/photo-editor.component.css
@@ -1,5 +1,4 @@
-img.img-thumbnail
- {
+img.img-thumbnail {
    min-width: 100px !important;
    margin-bottom: 5px;
 
@@ -12,3 +11,16 @@ img.img-thumbnail
  input[type=file] {
    color: transparent;
  }
+
+ .not-approved {
+  opacity: 0.2;
+}
+
+.img-wrapper {
+  position: relative
+}
+
+.img-text {
+  position: absolute;
+  bottom: 30%;
+} 
