pre-switch to PostgreSQL

--- a/client/src/app/errors/not-found/not-found.component.html
+++ b/client/src/app/errors/not-found/not-found.component.html
@@ -9,7 +9,7 @@
   </div>
   <div class="card-body">
     <p class="card-text">The page you requested could not be found.</p>
-    <button class="btn btn-outline-light btn-lg" routerLink="/">Return to home page</button>
+    <button class="btn btn-light btn-lg" routerLink="/">Return to home page</button>
 
   </div>
 </div>
