--- a/client/src/app/members/member-messages/member-messages.component.html
+++ b/client/src/app/members/member-messages/member-messages.component.html
@@ -51,7 +51,7 @@
           name="messageContent"
           >
         <div class="input-group-append">
-          <button [disabled]="!messageForm.valid" class="btn btn-primary ml-1" type="submit">Send</button>
+          <button [disabled]="!messageForm.valid" class="btn bg-primary btn-outline-primary ml-1" type="submit">Send</button>
         </div>
       </div>
     </form>
