--- a/client/src/app/modals/confirm-dialog/confirm-dialog.component.html
+++ b/client/src/app/modals/confirm-dialog/confirm-dialog.component.html
@@ -5,6 +5,6 @@
  <p> <strong>{{message}}</strong></p>
 </div>
 <div class="modal-footer">
-  <button type="button" class="btn btn-outline-success" (click)="confirm()">{{btnOkText}}</button>
-  <button type="button" class="btn btn-outline-danger" (click)="decline()">{{btnCancelText}}</button>
+  <button type="button" class="btn btn-success" (click)="confirm()">{{btnOkText}}</button>
+  <button type="button" class="btn btn-danger" (click)="decline()">{{btnCancelText}}</button>
 </div>
