--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -52,7 +52,7 @@
                     class="form-control mr-sm-2"
                     type="password"
                     placeholder="Password">
-                <button class="btn btn-success my-2 my-sm-0" type="submit">Login</button>
+                <button class="btn btn-success btn-sm my-2 my-sm-0" type="submit">Login</button>
             </form>
         </div>
     </div>
