--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -2,7 +2,7 @@
   <h3>Loading...</h3>
 </ngx-spinner>
 <app-nav></app-nav>
-<div class="container" style="margin-top: 100px;">
+<div class="container" style="margin-top: 6.25rem;">
     <router-outlet></router-outlet>
 </div>
 
