--- a/client/src/app/members/member-detail/member-detail.component.html
+++ b/client/src/app/members/member-detail/member-detail.component.html
@@ -29,10 +29,10 @@
           <p>{{member.lastActive | date: 'longDate'}}</p>
         </div>
         <!-- Like and Message -->
-        <div class="card-footer">
+        <div class="card-footer bg-light">
           <div class="btn-group d-flex">
-            <button class="btn btn-primary">Like</button>
-            <button (click)="selectTab(3)" class="btn btn-success">Message</button>
+            <button class="btn btn-outline-primary">Like</button>
+            <button (click)="selectTab(3)" class="btn btn-outline-success ml-1">Message</button>
           </div>
         </div>
       </div>
