--- a/client/src/app/admin/photo-management/photo-management.component.css
+++ b/client/src/app/admin/photo-management/photo-management.component.css
@@ -1,5 +1,5 @@
 img.img-thumbnail {
-  height: 150px;
-  min-width: 150px !important;
-  margin-bottom: 2px;
+  height: 9rem;
+  min-width: 9rem !important;
+  margin-bottom: 0.125rem;
 }
