--- a/client/src/app/admin/photo-management/photo-management.component.html
+++ b/client/src/app/admin/photo-management/photo-management.component.html
@@ -3,9 +3,9 @@
       <h4>{{photo.username}}</h4>
       <img src='{{photo.url}}' class='img-thumbnail p-1' alt='{{photo.username}}'>
 
-      <div class='text-center'>
-          <button class='btn btn-sm btn-success mr-1' (click)='approvePhoto(photo.id)'>Approve</button>
-          <button class='btn btn-sm btn-danger' (click)='rejectPhoto(photo.id)'>Reject</button>
+      <div class='btn-group d-flex'>
+          <button class='btn btn-sm btn-outline-success mr-1' (click)='approvePhoto(photo.id)'>Approve</button>
+          <button class='btn btn-sm btn-outline-danger' (click)='rejectPhoto(photo.id)'>Reject</button>
       </div>
   </div>
 </div>
