--- a/client/src/app/members/member-edit/member-edit.component.html
+++ b/client/src/app/members/member-edit/member-edit.component.html
@@ -3,7 +3,7 @@
     <h1>Your Profile:</h1>
   </div>
   <div class="col-8">
-    <div class="alert alert-info" *ngIf="editForm.dirty">
+    <div class="alert alert-dismissible alert-secondary" *ngIf="editForm.dirty">
       <strong>Information: </strong> You have made changes. Any unsaved changes will be lost!
     </div>
   </div>
@@ -30,7 +30,7 @@
           </div>
         </div>
           <div class="card-footer">
-            <button [disabled]="!editForm.dirty" form="editForm" type="submit" class="btn btn-success btn-block">Save Changes</button>
+            <button [disabled]="!editForm.dirty" form="editForm" type="submit" class="btn btn-outline-success btn-block">Save Changes</button>
           </div>
         </div>
       </div>
