--- a/client/src/app/members/photo-editor/photo-editor.component.html
+++ b/client/src/app/members/photo-editor/photo-editor.component.html
@@ -10,13 +10,13 @@
       <button
         [disabled]="photo.isMain || !photo.isApproved"
         (click)="setMainPhoto(photo)"
-        [ngClass]='photo.isMain ? "btn-success active" : "btn-success"'
+        [ngClass]='photo.isMain ? "btn-outline-success active" : "btn-outline-success"'
         class="btn btn-sm mr-1">Main
       </button>
       <button
         [disabled]="photo.isMain"
         (click)="deletePhoto(photo.id)"
-        class="btn btn-sm btn-danger">
+        class="btn btn-sm btn-outline-danger">
           <i class="fa fa-trash"></i></button>
     </div>
   </div>
@@ -29,7 +29,7 @@
            [ngClass]="{'nv-file-over': hasBaseDropzoneOver}"
            (fileOver)="fileOverBase($event)"
            [uploader]="uploader"
-           style="width: 200px;"
+           style="width: 12.5rem;"
            class="card bg-faded p-3 text-center mb-3 my-drop-zone">
            <i class="fa fa-upload fa-3x"></i>
           <p>Drop photos here</p>
@@ -39,7 +39,7 @@
       <input class="mb-2" type="file" ng2FileSelect [uploader]="uploader" multiple  /><br/>
     </div>
   <!-- only display this column if there is an image -->
-  <div class="col-md-9 ml-1" style="margin-bottom: 40px" *ngIf="uploader?.queue?.length">
+  <div class="col-md-9 ml-1" style="margin-bottom: 3.75rem" *ngIf="uploader?.queue?.length">
       <hr>
       <h3 class="text-center" >Upload Queue</h3>
       <h6>Photos: {{ uploader?.queue?.length }}</h6>
@@ -66,15 +66,15 @@
                 <div class="progress-bar" role="progressbar" [ngStyle]="{ 'width': uploader.progress + '%' }"></div>
               </div>
           </div>
-          <button type="button" class="btn btn-success btn-s mr-1"
+          <button type="button" class="btn btn-outline-success btn-s mr-1"
                   (click)="uploader.uploadAll()" [disabled]="!uploader.getNotUploadedItems().length">
               <i class="fa fa-upload"></i> Upload all
           </button>
-          <button type="button" class="btn btn-warning btn-s mr-1"
+          <button type="button" class="btn btn-secondary btn-s mr-1"
                   (click)="uploader.cancelAll()" [disabled]="!uploader.isUploading">
               <i class="fa fa-ban"></i> Cancel all
           </button>
-          <button type="button" class="btn btn-danger btn-s mr-1"
+          <button type="button" class="btn btn-outline-danger btn-s mr-1"
                   (click)="uploader.clearQueue()" [disabled]="!uploader.queue.length">
               <i class="fa fa-trash"></i> Remove all
           </button>
