--- a/client/src/app/modals/roles-modal/roles-modal.component.html
+++ b/client/src/app/modals/roles-modal/roles-modal.component.html
@@ -24,6 +24,6 @@
  </form>
 </div>
 <div class="modal-footer">
-  <button type="button" class="btn btn-danger" (click)="bsModalRef.hide()">Cancel</button>
-  <button type="button" class="btn btn-success" (click)="updateRoles()">Update Roles</button>
+  <button type="button" class="btn btn-outline-danger" (click)="bsModalRef.hide()">Cancel</button>
+  <button type="button" class="btn btn-outline-success" (click)="updateRoles()">Update Roles</button>
 </div>
