--- a/client/src/app/members/member-messages/member-messages.component.html
+++ b/client/src/app/members/member-messages/member-messages.component.html
@@ -1,4 +1,4 @@
-<div class="card bg-white">
+<div class="card">
   <div
     class="card-body"
     #scrollFunction
@@ -26,7 +26,7 @@
                 <span class="fa fa-clock-o">
                 sent {{message.messageSent | timeago}}
                 </span>
-                <span class="text-danger" *ngIf="!message.dateRead
+                <span class="text-dark" *ngIf="!message.dateRead
                   && message.senderUsername !== username">
                 (unread)
                 </span>
@@ -36,7 +36,7 @@
                 </span>
               </small>
             </div>
-            <p>{{message.content}}</p>
+            <p class="font-weight-bold">{{message.content}}</p>
           </div>
         </div>
       </li>
@@ -46,15 +46,17 @@
     <form #messageForm="ngForm" (ngSubmit)="sendMessage()" autocomplete="off">
       <div class="input-group">
         <input
-          type="text"
-          class="form-control input-sm ps-2"
-          placeholder="Send a private message"
-          [(ngModel)]="messageContent"
           required
           name="messageContent"
-          >
+          [(ngModel)]="messageContent"
+          type="text"
+          class="form-control input-sm"
+          placeholder="Send a private message"
+        >
         <div class="input-group-append">
-          <button [disabled]="!messageForm.valid" class="btn btn-outline-primary ml-1" type="submit">Send</button>
+          <button [disabled]="!messageForm.valid || loading"
+            class="btn btn-outline-primary ml-1"
+            type="submit">Send <i *ngIf="loading" class="fa-regular fa-rotate fa-spin"></i></button>
         </div>
       </div>
     </form>
